testdata/baselines/reference/submodule/conformance/importTag15(module=es2015).errors.txt
1.js(4,13): error TS2304: Cannot find name 'I'.


==== 0.ts (0 errors) ====
    export interface I { }
    
==== 1.js (1 errors) ====
    /** @import { I } from './0' with { type: "json" } */
    /** @import * as foo from './0' with { type: "json" } */
    
    /** @param {I} a */
                ~
!!! error TS2304: Cannot find name 'I'.
    function f(a) {}
    